    to be completely cleaned up though), and to 64-bit platforms. Also add
    two new configure option, one to enable or disable building of Real binary
    support altogether and one to choose the path where to look for the codecs
    by default (it can, and probably should) be different from the Win32
    codecs path.
  * Avoid a possible floating-point exception when starting stream playback.
  * Now xine can play correctly media on HTTP servers reporting status codes but
    no status message.
  * Wave files with 24-bit integer PCM streams now should play correctly
    (downplayed to 16-bit).
  * Added centre-cutout (4:3 in 16:9) to the expand plugin.
    Patch by Reinhard Nissl.
  * Fix support of block devices for AC3 and DTS demuxers. Thanks to Matthias
    Kretz for the original patch.
  * Portability fixes for Mac OS X, in particular Mac OS X on the new Intel
    Macs. Thanks to Martin Aumueller and Emanuele Giaquinta.
  * Fix amp muting when level is still at 100. Patch by Reinhard Nissl.
  * Create at least a 1×1 shared image when the first frame is skipped (and
    thus reported as 0×0), to avoid disabling shared memory for all others.
    Patch by Reinhard Nissl.

xine-lib (1.1.4)
  * Mark string-type configuration items according to whether they're plain
    strings or names of files, device nodes or directories. This information
    is available to front ends (via .num_value) so that they can present
    file/dir-open dialogue boxes if they so choose.
    Subtitle font selection is split up due to this.
  * Applied the patch to fix text relocation, provided by PaX Team for Gentoo
    and previously applied by other distributions as well. Fixes the non-PIC
    code being generated. Note: patch reverted for tomsmocomp (segfault).
  * Fix race condition in audio_out by using a recursive mutex; patch by
    Reinhard Nissl. [bug #1551911]
  * Allow building with Sun CC by fixing the lprintf variadic macro; patch by
    Taso N. Devetzis. [bug #1614406]