@@ -33,8 +33,8 @@ xine-lib (1.1.5) (Unreleased)
     by default (it can, and probably should) be different from the Win32
     codecs path.
   * Avoid a possible floating-point exception when starting stream playback.
-  * Now xine can play correctly media on HTTP servers reporting status codes but
-    no status message.
+  * Now xine can play correctly media on HTTP servers reporting status codes
+    but no status message.
   * Wave files with 24-bit integer PCM streams now should play correctly
     (downplayed to 16-bit).
   * Added centre-cutout (4:3 in 16:9) to the expand plugin.
@@ -47,6 +47,7 @@ xine-lib (1.1.5) (Unreleased)
   * Create at least a 1×1 shared image when the first frame is skipped (and
     thus reported as 0×0), to avoid disabling shared memory for all others.
     Patch by Reinhard Nissl.
+  * Send an event when the amp level is modified. Patch by Reinhard Nissl.
 
 xine-lib (1.1.4)
   * Mark string-type configuration items according to whether they're plain
